test.txt
In file included from /cygdrive/p/gcc/gcc61-include/bits/stl_algobase.h:71:0,
                 from /cygdrive/p/gcc/gcc61-include/bits/char_traits.h:39,
                 from /cygdrive/p/gcc/gcc61-include/string:40,
                 from errornovel1.cpp:1:
/cygdrive/p/gcc/gcc61-include/bits/predefined_ops.h: In instantiation of
‘bool __gnu_cxx::__ops::_Iter_pred<_Predicate>::operator()(_Iterator)
 [with _Iterator = std::_Rb_tree_iterator<
     std::pair<const std::__cxx11::basic_string<char>, double> >;
  _Predicate = main()::<lambda(const std::string&)>]’:

/cygdrive/p/gcc/gcc61-include/bits/stl_algo.h:104:42:   required from
‘_InputIterator std::__find_if(_InputIterator, _InputIterator, _Predicate,
 std::input_iterator_tag)
 [with _InputIterator = std::_Rb_tree_iterator<
     std::pair<const std::__cxx11::basic_string<char>, double> >;
  _Predicate = __gnu_cxx::__ops::_Iter_pred<
     main()::<lambda(const std::string&)> >]’

/cygdrive/p/gcc/gcc61-include/bits/stl_algo.h:161:23:   required from
‘_Iterator std::__find_if(_Iterator, _Iterator, _Predicate)
 [with _Iterator = std::_Rb_tree_iterator<
     std::pair<const std::__cxx11::basic_string<char>, double> >;
  _Predicate = __gnu_cxx::__ops::_Iter_pred<
     main()::<lambda(const std::string&)> >]’

/cygdrive/p/gcc/gcc61-include/bits/stl_algo.h:3824:28:   required from
‘_IIter std::find_if(_IIter, _IIter, _Predicate)
 [with _IIter = std::_Rb_tree_iterator<
     std::pair<const std::__cxx11::basic_string<char>, double> >;
  _Predicate = main()::<lambda(const std::string&)>]’

errornovel1.cpp:13:29:   required from here

/cygdrive/p/gcc/gcc61-include/bits/predefined_ops.h:234:11: error:
no match for call to
‘(main()::<lambda(const std::string&)>)
 (std::pair<const std::__cxx11::basic_string<char>, double>&)’

     { return bool(_M_pred(*__it)); }
              ~~~~~~^~~~~~~~~~~~~~

/cygdrive/p/gcc/gcc61-include/bits/predefined_ops.h:234:11: note:
candidate: bool (*)(const std::string&)
candidate expects 1 argument of type ‘const std::string&’

errornovel1.cpp:11:52: note:
candidate: main()::<lambda(const std::string&)>

errornovel1.cpp:11:52: note:
no known conversion for argument 1 from
‘std::pair<const std::__cxx11::basic_string<char>, double>’
to ‘const std::string&’